--- a/Kset.css
+++ b/Kset.css
@@ -38,6 +38,7 @@
 }
 .bottom{
     margin-bottom: 1vh;
+    width: calc(100vw -66px);
     display: flex;
     flex-direction: column;
 }
@@ -48,6 +49,8 @@
 }
 .miniCover{
     height: 50px;
+    height: 100%;
+    max-height: 62px;
     border: solid;
     border-width: 2px;
     border-color: #0E0C0B;
@@ -59,7 +62,7 @@
     border-radius: 12px;
     bottom: 0px;
     width: 100%;
-    max-width: 755px;
+    max-width: 800px;
     margin-left: auto;
     margin-right: auto;
     display: flex;
@@ -150,6 +153,16 @@ body{
 }
 .signup-banner{
     margin-left: 1vw;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 0.8rem;
+    text-overflow: ellipsis;
+    overflow: hidden; 
+    white-space: nowrap;
+    height: 1.8rem;
+}
+.accent-color{
+    color: #ee0000;
 }
 .icon {
     margin-left: auto;
@@ -273,8 +286,8 @@ body{
 }
 
 .track{
-    width: 15%;
-    padding: 0.43%;
+    width: 12.6%;
+    padding: 0.44%;
     margin: 0.4%;
     box-shadow: 3px 3px 10px #000;
     border-radius: 8%;
@@ -322,14 +335,14 @@ body{
 }
 @media screen and (max-width:1408px){
     .track{
-        width: 18%;
-        padding: 0.5%;
-        margin: 0.5%;
+        width: 15%;
+        padding: 0.43%;
+        margin: 0.4%;
     }
 }
 @media screen and (max-width:1024px) {
     .track{
-        width: 23%;
+        width: 18%;
         padding: 0.5%;
         margin: 0.5%;
     } 
@@ -371,12 +384,22 @@ body{
     .menu-logo{
         display: block;
     }
+    .signup-banner{
+        margin-left: 2vw;
+
+    }
 }
 @media screen and (max-width:768px) {
     .track{
+        width: 23%;
+        padding: 0.5%;
+        margin: 0.5%;
+    }
+}
+@media screen and (max-width:460px) {
+    .track{
         width: 31%;
         padding: 0.6%;
-        margin: 0.5%;
     }
 }
 ::-webkit-scrollbar {
