--- a/Kset.css
+++ b/Kset.css
@@ -70,6 +70,7 @@
     border-width: 0px;
     border-top-width: 1px;
     border-color: #f1f1f190;
+    max-height: 64px;
 }
 .sidebar{
     width: 25vw;
