--- a/Kset.css
+++ b/Kset.css
@@ -420,3 +420,18 @@ body{
     background: #ee0000a0;
     border-radius: 10px;
 }
+input{
+    width: 30vw;
+    height: 3vh;
+    background-color: #1e1e1e;
+    border-radius: 20px;
+    padding: 0.3rem;
+    outline: none;
+}
+input:hover{
+    background-color: #2e2e2e;
+    transition: 500ms;
+}
+input:focus{
+    border: 2px solid white;
+}
