--- a/Kset.css
+++ b/Kset.css
@@ -174,8 +174,8 @@ body{
 }
 .link{
     position:fixed;
-    bottom: 25px;
-    left: 25px;
+    bottom: 45px;
+    left: 30px;
     display: flex;
     flex-direction: column;
 }
@@ -428,7 +428,7 @@ body{
     background: #ee0000a0;
     border-radius: 10px;
 }
-input{
+.serach-input{
     width: 30vw;
     max-width: 400px;
     height: 18px;
@@ -437,11 +437,11 @@ input{
     padding: 0.3rem;
     outline: none;
 }
-input:hover{
+.fade:hover{
     background-color: #2e2e2e;
     transition: 500ms;
 }
-input:focus{
+.fade:focus{
     border: 2px solid white;
 }
 .search-bar{
@@ -451,4 +451,75 @@ input:focus{
 .footerspacer{
     height: calc(100vh - 130px);
     width: 100%;
+}
+.floating{
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+.sign{
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #1e1e1e;
+    box-shadow: 5px 5px 15px #000;
+    border-radius: 24px;
+    width: 90vw;
+    max-width: 450px;
+    padding: 1em;
+}
+.sign-img{
+    filter: invert(0.90);
+    width: 30%;
+    margin: 1em;
+    margin-bottom: 2em;
+}
+.sign-inputs{
+    height: 18px;
+    background-color: #1e1e1e;
+    border-radius: 20px;
+    padding: 0.5em;
+    margin: 0.5em;
+    outline: none;
+    width: 80%;
+}
+.sign-button{
+    width: 60%;
+    border-radius: 20px;
+    background-color: #1e1e1e;
+    padding: 0.5em;
+    margin: 1em;
+    border-color: #f1f1f1;
+}
+.unfocus{
+    animation-name: shadow;
+    animation-duration: 500ms;
+    animation-fill-mode: forwards;
+}
+@keyframes shadow {
+    from {}
+    to {
+        filter: blur(1px) brightness(0.5);
+    }
+    
+}
+.focus{
+    animation-name: zoom;
+    animation-duration: 500ms;
+    animation-fill-mode: forwards;
+}
+@keyframes zoom {
+    from {
+        scale: 0;
+        filter: brightness(0.5);
+    }
+    to {
+        scale: 1;
+        filter: brightness(1);
+    }
+}
+.hide-floating{
+    display: none;
 }
