--- a/Kset.css
+++ b/Kset.css
@@ -36,6 +36,7 @@
     overflow-y: auto;
     overflow-x: hidden;
     background-color: black;
+    width: inherit;
 }
 .bottom{
     margin-bottom: 1vh;
