--- a/Kset.css
+++ b/Kset.css
@@ -526,7 +526,7 @@ body{
     }
 }
 .hide-floating{
-    display: none;
+    display: none !important;
 }
 .playlist-selection{
     padding: 1.2vmax;
