--- a/Kset.css
+++ b/Kset.css
@@ -471,7 +471,7 @@ body{
     background-color: #1e1e1e;
     box-shadow: 5px 5px 15px #000;
     border-radius: 24px;
-    width: 90vw;
+    width: 75vw;
     max-width: 450px;
     padding: 1em;
 }
@@ -497,6 +497,9 @@ body{
     padding: 0.5em;
     margin: 1em;
     border-color: #f1f1f1;
+}
+.sign-error{
+    border-color: #ee0000 !important;
 }
 .unfocus{
     animation-name: shadow;
