--- a/assets/Kset.css
+++ b/assets/Kset.css
@@ -100,11 +100,7 @@ audio {
 @supports (-moz-appearance:none) {
     audio {
         filter: invert(0);
-        background-color: black;
-        border: solid;
-        border-width: 2px;
-        border-color: #ff000090;
-        border-radius: 24px;
+        background-color: #0E0C0B;
     }
 }
 .content{
@@ -132,7 +128,7 @@ body{
 }
 @font-face {
     font-family: 'myfont';
-    src: url("assets/Raleway-VariableFont_wght.ttf") format("truetype");
+    src: url("Raleway-VariableFont_wght.ttf") format("truetype");
     font-weight: bold;
     font-style: normal;
 }
