--- a/assets/Kset.css
+++ b/assets/Kset.css
@@ -685,3 +685,17 @@ div > ol{
 .sign-up-ext{
     margin-top: 2em;
 }
+.clear-input{
+    margin-left: -35px;
+    background-color: transparent;
+    border: none;
+    border-radius: 24px;
+}
+.clear-input:hover{
+    background-color: #4e4e4e;
+}
+input:hover{
+    animation-name: togrey;
+    animation-duration: 500ms;
+    animation-fill-mode: forwards;
+}
