--- a/assets/Kset.css
+++ b/assets/Kset.css
@@ -547,6 +547,18 @@ body{
     }
     
 }
+.artist-profile{
+    margin: 2em;
+    margin-bottom: 0.5em;
+    height: 25vh;
+    border-radius: 100%;
+}
+.artist-wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
 .focus{
     animation-name: zoom;
     animation-duration: 500ms;
@@ -577,6 +589,7 @@ body{
     padding: 1.2vmax;
     display: flex;
     flex-flow: column wrap;
+    align-items: center;    
     justify-content: flex-start;
     border-radius: 24px;
     background-color: #1e1e1e
