--- a/assets/Kset.css
+++ b/assets/Kset.css
@@ -9,7 +9,7 @@
 }
 .play{
     width: 400%;
-    filter: invert(1) drop-shadow(2px 6px 4px black);
+    filter: drop-shadow(2px 6px 4px black);
     pointer-events: none
 }
 .like-wrapper{
@@ -101,12 +101,6 @@
     display: flex;
     flex-flow: column;
 }
-.sidebarButton:hover{
-    animation-name: underline;
-    animation-duration: 1000ms;
-    animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    animation-fill-mode: forwards;
-}
 
 audio {
     filter: invert(1);
@@ -144,7 +138,8 @@ audio {
     align-items: center;
     justify-content: flex-start;
     border-radius: 24px;
-    background-color: #1e1e1e;
+    background: rgb(222,108,26);
+    background: linear-gradient(155deg, rgba(222,108,26,0.45) 0%, rgba(30,30,30,1) 10%); 
 }
 .category{
     display: flex;
@@ -225,19 +220,17 @@ body{
 /* General rules for all sizes */
 .sidebarButton{
     background-color:#1e1e1e00;
-    border-color: #f1f1f1;
     border-width: 0px;
-    border-bottom-width: 2px;
-    padding: 18px;
+    padding: 24px 0px;
     align-items: flex-start;
     display: flex;
-    margin-right: 8px;
-    margin-left: 8px;
+    margin-right: 28px;
+    margin-left: 28px;
 }
 .sidebarIcon{
     max-height: 1rem;
     aspect-ratio: 1/1;
-    margin-left: 40px;
+    margin-left: 20px;
     margin-right: 1rem;
 }
 
@@ -253,13 +246,6 @@ body{
     border-color: #f1f1f1;
     border-width: 0px;
     border-radius: 5px;
-}
-
-.button:hover{
-    animation-name: underline;
-    animation-duration: 1000ms;
-    animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    animation-fill-mode: forwards;
 }
 @keyframes underline {
     from {
@@ -323,6 +309,7 @@ body{
     padding: 0.44%;
     margin: 0.4%;
     box-shadow: 3px 3px 10px #000;
+    background-color: #1e1e1e;
     border-radius: 8%;
     border-bottom-left-radius: 0%;
 }
@@ -408,12 +395,12 @@ body{
     .sidebar{
         width: 80vw;
         box-sizing: border-box;
-        height: 92vh;
+        height: calc(100vh - 55px);
         padding: 1%;
         display: flex;
         flex-flow: column;
         position: fixed;
-        top: 8vh;
+        top: 55px;
         left: 0%;
         background-color: black;
     }
@@ -465,7 +452,8 @@ body{
     border-radius: 10px;
 }
 .search-input{
-    width: 30vw;
+    width: 50vw;
+    min-width: 180px;
     max-width: 400px;
     height: 18px;
     min-width: 144px;
@@ -520,9 +508,9 @@ body{
     background-color: #1e1e1e;
     border-radius: 20px;
     padding: 0.5em;
-    margin: 0.5em;
+    margin: 0.5em 0;
     outline: none;
-    width: 80%;
+    width: 93%;
 }
 .sign-button{
     width: 60%;
@@ -653,7 +641,6 @@ body{
 }
 .playlist-item-play{
     height: 1.6em;
-    filter: invert(1);
 }
 .playlist-item-cover{
     height: 3.2em;
@@ -728,3 +715,18 @@ input:hover{
     animation-duration: 500ms;
     animation-fill-mode: forwards;
 }
+form{
+    display: flex;
+    width: 60%;
+}
+.fancy-link {
+    background-image: linear-gradient(155deg, rgba(222,108,26,0.75) 50%, rgba(30,30,30,1) 100%); 
+    text-decoration: none;
+    background-size: 0% 4px;
+    background-repeat: no-repeat;
+    background-position: left bottom;
+    transition: background-size 300ms ease;
+  }
+  .fancy-link:hover {
+    background-size: 100% 3px;
+  }
