--- a/assets/Kset.css
+++ b/assets/Kset.css
@@ -139,7 +139,7 @@ audio {
     justify-content: flex-start;
     border-radius: 24px;
     background: rgb(222,108,26);
-    background: linear-gradient(155deg, rgba(222,108,26,0.45) 0%, rgba(30,30,30,1) 10%); 
+    background: linear-gradient(155deg, rgba(222,108,26,0.65) 0%, rgba(30,30,30,1) 110vh); 
 }
 .category{
     display: flex;
