--- a/assets/Kset.css
+++ b/assets/Kset.css
@@ -432,6 +432,19 @@ div > ol{
     margin-top: 1px;
     margin-bottom: 1px;
 }
+.artist-title{
+    color: #f1f1f1;
+    opacity: 50%;
+    font-family: "myfont";
+    font-size: 0.8rem;
+    margin: 0%;
+    text-overflow: ellipsis;
+    overflow: hidden; 
+    height: 1.2em; 
+    white-space: nowrap;
+    margin-top: 1px;
+    margin-bottom: 1px;
+}
 .playlist-selection{ /* Playlists */
     padding: 1.2vmax;
     display: flex;
