--- a/assets/Kset.css
+++ b/assets/Kset.css
@@ -65,6 +65,7 @@ body{
     flex-direction: column;
 }
 .button{
+    cursor: pointer;
     margin-left: 1.5vw;
     background-color:black;
     border-color: #f1f1f1;
@@ -127,6 +128,7 @@ body{
 }
 .login-button{
     background-color: #de6c1a;
+    border: none;
 }
 
 
@@ -489,10 +491,8 @@ div > ol{
 .sign-button{
     width: 60%;
     border-radius: 20px;
-    background-color: #1e1e1e;
     padding: 0.5em;
     margin: 1em;
-    border-color: #f1f1f1;
 }
 .artist-wrapper{ /* Artist Page */
     display: flex;
