--- a/assets/Kset.css
+++ b/assets/Kset.css
@@ -556,7 +556,7 @@ div > ol{
     color: #f1f1f1;
     font-family: "myfont";
     font-size: 1rem;
-    margin: auto;
+    margin: 0;
 }
 
 .follow-button{
@@ -591,14 +591,37 @@ div > ol{
 }
 
 .artist-content{
-    margin-top: 10px;
+    width:100%;
+    margin-top: 0;
     padding: 1.2vmax;
     display: flex;
     flex-flow: row wrap;
     align-items: center;
     justify-content: flex-start;
     border-radius: 24px;
-    min-height: 40vw;
+}
+
+.artist-icon{
+    width: 12.6%;
+    padding: 0.44%;
+    margin: 0.4%;
+    box-shadow: 3px 3px 10px #000;
+    background-color: #1e1e1e;
+    border-radius: 50%;
+    border-bottom-left-radius: 0%;
+}
+
+.artist-icon:hover{
+    transform: scale(1.05);
+    animation-name: togrey;
+    animation-duration: 500ms;
+    animation-fill-mode: forwards;
+}
+
+.artist-icon-cover{
+    width: 100%;
+    border-radius: 50%;
+    aspect-ratio: 1/1;
 }
 
 /* Audio Player */
