--- a/assets/Kset.css
+++ b/assets/Kset.css
@@ -617,24 +617,9 @@ input[type="range"] {
     bottom: 0;
 }
 /* Chrome & Safari */
-/*
-input[type="range"]::-webkit-slider-runnable-track {
-    /* height: 5px;
-    border-radius: 24px;
-    cursor: pointer;
-    background: linear-gradient(to right, rgba(0, 125, 181, 0.6) var(--buffered-width), rgba(0, 125, 181, 0.2) var(--buffered-width)); */ /*
-    background: #4e4e4e;
-    width: 100%;
-    height: 3px;
-    cursor: pointer;
-    /* background: linear-gradient(115deg, rgba(222,108,26,0.9) 0%, rgba(30,30,30,1) 110vh); */ /*
-}
-*/
-
 input[type="range"] {
     overflow: hidden;
 }
-
 input[type="range"],
 input[type="range"]::-webkit-slider-runnable-track,
 input[type="range"]::-webkit-slider-thumb {
@@ -642,7 +627,6 @@ input[type="range"]::-webkit-slider-thumb {
     /* transition: all ease 100ms; */
     height: 17px;
 }
-
 input[type="range"]::-webkit-slider-thumb {
     width: 17px;
     box-shadow: 0 0 0 100vmax #de6c1a;
@@ -657,32 +641,29 @@ input[type="range"]::-webkit-slider-thumb {
         0 0
     );
 }
-input[type="range"]:hover::-webkit-slider-thumb {
+.seek-slider:hover::-webkit-slider-thumb {
     animation-name: webkit-expand-track;
     animation-duration: 500ms;
     animation-fill-mode: forwards;
+    clip-path: polygon(
+        100% 10px,
+        0 10px,
+        0 0,
+        -100vmax 0,
+        -100vmax 10px,
+        0 10px,
+        0 100%,
+        0 10px
+    );
 }
-
-/* .seek-slider:hover::-webkit-slider-thumb {
-    box-shadow: 100px;
-} */
-
+.seek-slider:hover::-webkit-slider-runnable-track {
+    height: 10px;
+}
 input[type="range"]::-webkit-slider-runnable-track {
     background: linear-gradient(#4e4e4e 0 0) scroll no-repeat center;
     border-radius: 3px;
     height: 5px;
 }
-
-/* input[type="range"]::-moz-range-progress {
-    background-color: #de6c1a;
-    border-radius: 3px;
-    height: 5px;
-}
-.seek-slider:hover::-moz-range-progress, .seek-slider:hover::-moz-range-track {
-    animation-name: expand-track;
-    animation-duration: 500ms;
-    animation-fill-mode: forwards;
-} */
 
 /* Firefox */
 input[type="range"]::-moz-range-track {
@@ -884,7 +865,7 @@ input[type="range"]:active::-ms-thumb {
 }
 @keyframes expand-track {
     from {
-        height: 5px; /* Firefox */
+        height: 5px;
     }
     to {
         height: 10px;
@@ -905,14 +886,14 @@ input[type="range"]:active::-ms-thumb {
     }
     to {
         clip-path: polygon(
-            100% 0,
-            0 0,
-            0 10px,
-            -100vmax 10px,
-            -100vmax 0,
-            0 0,
+            100% -2px,
+            0 -2px,
+            0 50px,
+            -100vmax 50px,
+            -100vmax -2px,
+            0 -2px,
             0 100%,
-            0 0
+            0 -2px
         );
     }
 }
