Fixed some formatting

--- a/assets/Kset.css
+++ b/assets/Kset.css
@@ -183,6 +183,7 @@ button:hover{
 
 /* Left Column */
 .left-column{
+    width: 25vw;
     margin-top: 65px;
     height: calc(100vh - 75px);
     position: sticky;
@@ -194,7 +195,8 @@ button:hover{
 
 /* Sidebar */
 .sidebar{
-    width: 250px;
+    width: 100%;
+    max-width: 300px;
     box-sizing: border-box;
     height: 100%;
     padding: 1%;
@@ -270,7 +272,6 @@ button:hover{
 .container { /* Menu for small screens */
     display: none;
     cursor: pointer;
-    margin-right: auto; 
     margin-left: 20px;
 }
 .bar1, .bar2, .bar3 {
@@ -290,8 +291,8 @@ button:hover{
     transform: translate(0, -10px) rotate(45deg);
 }
 .search-bar{ /* Search Bar */
-    margin: auto;
-    display: flex;
+    margin: auto 30px auto 20px;
+    width: 82%;
 }
 form{
     display: flex;
@@ -1107,12 +1108,14 @@ input[type="range"]:active::-ms-thumb {
         display: inline-block;
     }
     .footer{
+        width: 100vw;
         position: fixed;
-        bottom: 0px;
-        display: flex;
-        left: 50%;
-        transform: translateX(-50%);
+        /* left: 50%;
+        transform: translateX(-50%); */
         box-shadow: 0px -4px 10px #000;
+    }
+    .seek-slider {
+        width: 82%;
     }
     .content{
         border-radius: 0px;
@@ -1137,6 +1140,9 @@ input[type="range"]:active::-ms-thumb {
         margin-right: 0.3vw;
         width: 99.4vw;
     }
+    .logo {
+        display: none;
+    }
 }
 @media screen and (max-width:768px) { /* Smaller Tablet */
     .track,.artist-icon{
@@ -1144,8 +1150,8 @@ input[type="range"]:active::-ms-thumb {
         padding: 0.5%;
         margin: 0.5%;
     }
-    #search-bar > .clear-input{
-        left: -12vw;
+    .seek-slider {
+        margin: 0 0 0 5%;
     }
 }
 @media screen and (max-width:460px) { /* Phones */
@@ -1153,8 +1159,8 @@ input[type="range"]:active::-ms-thumb {
         width: 31%;
         padding: 0.6%;
     }
-    .navbar > .logo{
-        display: none;
+    .seek-slider {
+        margin: 0 0 0 10px;
     }
 }
 @media screen and (max-height:400px) { /* Landscape Phone*/
